; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/npymath/extr_halffloat.c_npy_halfbits_to_doublebits.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/npymath/extr_halffloat.c_npy_halfbits_to_doublebits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @npy_halfbits_to_doublebits(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, 31744
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %3, align 4
  %12 = and i32 %11, 32768
  %13 = shl i32 %12, 48
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %4, align 4
  switch i32 %14, label %56 [
    i32 0, label %15
    i32 31744, label %46
  ]

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = and i32 %16, 1023
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %2, align 4
  br label %63

22:                                               ; preds = %15
  %23 = load i32, i32* %5, align 4
  %24 = shl i32 %23, 1
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %29, %22
  %26 = load i32, i32* %5, align 4
  %27 = and i32 %26, 1024
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %25
  %30 = load i32, i32* %5, align 4
  %31 = shl i32 %30, 1
  store i32 %31, i32* %5, align 4
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %4, align 4
  br label %25

34:                                               ; preds = %25
  %35 = load i32, i32* %4, align 4
  %36 = sub nsw i32 1008, %35
  %37 = shl i32 %36, 52
  store i32 %37, i32* %7, align 4
  %38 = load i32, i32* %5, align 4
  %39 = and i32 %38, 1023
  %40 = shl i32 %39, 42
  store i32 %40, i32* %8, align 4
  %41 = load i32, i32* %6, align 4
  %42 = load i32, i32* %7, align 4
  %43 = add nsw i32 %41, %42
  %44 = load i32, i32* %8, align 4
  %45 = add nsw i32 %43, %44
  store i32 %45, i32* %2, align 4
  br label %63

46:                                               ; preds = %1
  %47 = load i32, i32* %6, align 4
  %48 = sext i32 %47 to i64
  %49 = add i64 %48, 9218868437227405312
  %50 = load i32, i32* %3, align 4
  %51 = and i32 %50, 1023
  %52 = shl i32 %51, 42
  %53 = sext i32 %52 to i64
  %54 = add i64 %49, %53
  %55 = trunc i64 %54 to i32
  store i32 %55, i32* %2, align 4
  br label %63

56:                                               ; preds = %1
  %57 = load i32, i32* %6, align 4
  %58 = load i32, i32* %3, align 4
  %59 = and i32 %58, 32767
  %60 = add i32 %59, 1032192
  %61 = shl i32 %60, 42
  %62 = add i32 %57, %61
  store i32 %62, i32* %2, align 4
  br label %63

63:                                               ; preds = %56, %46, %34, %20
  %64 = load i32, i32* %2, align 4
  ret i32 %64
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
